@@ -1,5 +1,7 @@
 *SVN*
 
+* Update Routing to complain when :controller is not specified by a route. Closes #6669. [Nicholas Seckar]
+
 * Ensure render_to_string cleans up after itself when an exception is raised.  #6658 [rsanheim]
 
 * Extract template_changed_since? from compile_template? so plugins may override its behavior for non-file-based templates.  #6651 [Jeff Barczewski]
